src/snapshots/gh_stack__tree__tests__snapshot_linear_stack_ascii.snap
---
source: src/tree.rs
expression: output
---
* pp--06-14-part_3 (current)
|
o pp--06-14-part_2
|
o pp--06-14-part_1
|
o main
