src/snapshots/gh_stack__tree__tests__snapshot_linear_stack_unicode.snap
---
source: src/tree.rs
expression: output
---
◉ pp--06-14-part_3 (current)
│
◯ pp--06-14-part_2
│
◯ pp--06-14-part_1
│
◯ main
