src/snapshots/gh_stack__tree__tests__snapshot_stack_with_commits.snap
---
source: src/tree.rs
expression: output
---
* pp--06-14-part_3 (current)
|
| 95338df - part 3
| a1b2c3d - some other commit
| + 2 more
|
o pp--06-14-part_2
|
| 95610c6 - part 2
|
o main
