src/snapshots/gh_stack__tree__tests__snapshot_with_closed_merged.snap
---
source: src/tree.rs
expression: output
---
* pp--06-14-part_3 (current)
|
o pp--06-14-part_2 [merged]
|
o pp--06-14-part_1 [closed]
|
o main
