src/snapshots/gh_stack__tree__tests__snapshot_with_draft.snap
---
source: src/tree.rs
expression: output
---
* wip-feature (current) (draft)
|
o feature-base
|
o main
